using UnityEngine;


internal static class AnimationString
{
    internal static string IsMoving = "IsMoving";
    internal static string IsRunning = "IsRunning";
    internal static string IsGrounded = "IsGrounded";
    internal static string yVelocity = "yVelocity";
    internal static string jump = "jump";
    internal static string isOnWall = "isOnWall";
    internal static string isOnCeiling = "isOnCeiling";
    internal static string attack = "attack";
    internal static string canMove = "canMove";
    internal static string hasTarget = "hasTarget";
    internal static string isAlive = "isAlive";
}
